# ets_target_database

./: .gitignore  .markdownlintrc  LICENSE  LICENSE.txt  README.md  generate_cli_readme.bash  make_database.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_make_database.py  test_targetdb_api.py
.github/workflows/: codacy.yml  codeql.yml  deploy_docs.yml  deploy_docs_github_pages.yml  deploy_docs_naoj.yml  test_database.yml  update-copyright.yml
alembic/pfsa-db01-gb/alembic/: README.md  env.py
docs/: cli_tools.md  conf.py  contact.md  examples.md  getting_started.md  index.md  index.rst  input_target_list.md
docs/examples/: docker.md  index.md  obsproc.md  operation.md  preparation.md  queries.md
docs/reference/: api.md  cli.md
docs/schema/: filter_name.md  fluxstd.md  index.md  input_catalog.md  partner.md  pfs_arm.md  proposal.md  proposal_category.md  sky.md  target.md  target_type.md  user_pointing.md
docs/tbls/: README.md  public.alembic_version.md  public.cluster.md  public.filter_name.md  public.fluxstd.md  public.input_catalog.md  public.partner.md  public.pfs_arm.md  public.proposal.md  public.proposal_category.md  public.sky.md  public.target.md  public.target_type.md  public.user_pointing.md  schema.json
examples/commissioning_2021nov/: README.md  commissioning.py  commissioning_demo_1_monodera.py  commissioning_demo_2_monodera.py  generate_target_csv.py  generate_target_feather.py  make_database.bash  plot_fiberalloc.py  populate_database.sh  schema_targetdb_tables.md  subaru_fiber_allocation_2021nov.py  template_database_config.ini  test_targetdb_api_comm_2021nov.py
examples/commissioning_2021nov/data/: input_catalog.csv  proposal.csv  target_type.csv
examples/commissioning_2022dec/filter_name/: insert_filter_name.py  log.insert_data  run_insert_data.sh
examples/commissioning_2022dec/targetdb_api_utils/: __init__.py
examples/commissioning_2022dec/update_ob_code/: generate_ob_code.py  log.run  run_update_ob_code.sh
examples/commissioning_2022jun/: append_cosmology_targets.py  populate_targetdb.sh  subaru_fiber_allocation.py
examples/commissioning_2022jun/pointing_utils/: dbutils.py  designutils.py  nfutils.py
examples/commissioning_2022may/: README.md  check_calibstars_pfsdesign.py  check_cobra_offsets.py  generate_fstarlist_to_feather.py  generate_sky_to_feather.py  insert_ishigaki_targets.py  insert_yamashita_stars.py  make_database.bash  populate_targetdb.sh  subaru_fiber_allocation.py  targetdb_api_utils.py  targets_S22A-EN16.ecsv  template_config.toml  template_database_config.ini  update_fluxstd_filterinfo.py
examples/commissioning_2022may/data/: input_catalog.csv
examples/commissioning_2022may/dbschema/: schema_targetdb_tables.md
examples/commissioning_2022may/pointing_utils/: dbutils.py  designutils.py  nfutils.py
examples/commissioning_2022nov/calstar/: insert_yamashita_stars.py  log.update  targetdb_api_utils.py
examples/commissioning_2022nov/co_targets/: append_cosmology_targets_2022nov.py  run_populate_cosmology.sh
examples/commissioning_2022nov/fluxstd/: generate_fstarlist_to_feather.py  log.generate_feather  log.generate_feather-2.1  log.populate_fluxstd  log.populate_fluxstd-2.1  populate_targetdb.sh
examples/commissioning_2022nov/ga_targets/: insert_ga_targets.py  populate_targetdb.sh
examples/commissioning_2022nov/sky/: convert_sky_to_feather.py  populate_targetdb.sh
examples/commissioning_2022sep/: .gitignore  subaru_fiber_allocation.py
examples/commissioning_2022sep/database_work/: append_cosmology_targets_2022sep.py  convert_sky_to_feather.py  insert_yamashita_stars.py  populate_targetdb.sh  run_populate_cosmology.sh
examples/commissioning_2022sep/pointing_utils/: dbutils.py  nfutils.py
examples/commissioning_2023apr/calspec/: insert_yamashita_calspec_extra.py
examples/commissioning_2023apr/co_targets/: append_cosmology_targets_2023apr.py  run_populate_cosmology.sh
examples/commissioning_2023apr/ge_targets/: append_ge_emission_targets_2023apr.py  append_ge_photometric_targets_2023apr.py  append_ge_specz_deep_targets_2023apr.py  append_ge_specz_targets_2023apr.py  append_ge_wg_targets_2023apr.py  append_ge_wg_targets_additional_2023apr.py  run_populate_ge_wg.sh
examples/commissioning_2023feb/calstar/: insert_yamashita_stars.py  targetdb_api_utils.py
examples/commissioning_2023feb/co_targets/: append_cosmology_targets_2023feb.py  run_populate_cosmology.sh
examples/commissioning_2023feb/ga_targets/: insert_ga_targets.py  targetdb_api_utils.py
examples/commissioning_2023jul/co_targets/: append_cosmology_targets_2023jul.py  run_populate_cosmology.sh
examples/commissioning_2023jul/ga_targets/: insert_ga_targets.py  run_populate_ga_targets.sh
examples/data/: filter_names.csv  hscssp_pdr3_example_boxsearch_1000.csv  hscssp_pdr3_example_cleanobjects_100.csv  hscssp_pdr3_example_gdrop_2000.csv  input_catalog.csv  input_catalog_fluxstd.csv  input_catalogs.csv  object_type.csv  partner.csv  pfs_arm.csv  proposal.csv  proposal_category.csv  proposal_error.csv  proposals.csv  target_s21b-en01.csv  target_s21b-en01_offset.csv  target_s21b-en16.csv  target_types.csv
examples/data/targets/: example_input_catalogs.csv  example_input_catalogs_current.csv  example_proposals.csv  example_proposals_update.csv
examples/docker/: Dockerfile  dbconf.toml  docker-compose.yml
examples/docker/postgres/: docker-compose.yml
examples/gaia_dr2_to_dr3/: subaru_fiber_allocation.py
examples/output/: schema_targetdb_tables.md
examples/scripts/: generate_target_csv.py  make_database.bash  make_database.sh  populate_database.sh  targetdb_config.ini  test_dup_12arcsec.csv  test_duplicate_external.csv  test_duplicate_internal.csv  test_insert_fluxstd.py  test_insert_target_fluxarray.py  test_targetdb_api.py  test_unique_external.csv  test_unique_internal.csv
src/targetdb/: __init__.py  clustering_targets.py  manage.py  pfs_targetdb_create_schema.py  pfs_targetdb_generate_mdtable.py  targetdb.py  utils.py
targetdb/: utils.py
targetdb/model/: __init__.py
tests/: test_models.py
(+122 files in other folders)
